force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__EvaluationEvent__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__EvaluationEvent__c</fullName>
    <description>Event that causes this rule to be evaluated.</description>
    <inlineHelpText>Specify when this rule should be evaluated.</inlineHelpText>
    <label>Evaluation Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Load</fullName><default>false</default><label>Load</label></value>
            <value><fullName>Edit</fullName><default>false</default><label>Edit</label></value>
            <value><fullName>Save</fullName><default>false</default><label>Save</label></value>
            <value><fullName>Always</fullName><default>false</default><label>Always</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>