force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__LookupMessageField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__LookupMessageField__c</fullName>
    <description>Field on Lookup Object corresponding to Product Rule Message. Field must be text.</description>
    <inlineHelpText>Field on Lookup Object corresponding to Product Rule Message. Field must be text.</inlineHelpText>
    <label>Lookup Message Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>SBQQ__Message__c</fullName><default>false</default><label>SBQQ__Message__c</label></value>
            <value><fullName>MandatoryFor_LookupMessage__c</fullName><default>false</default><label>MandatoryFor_LookupMessage__c</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>