force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__LookupObject__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__LookupObject__c</fullName>
    <description>API Name of the Custom Object that stores the lookup data.</description>
    <inlineHelpText>API Name of the Custom Object that stores the lookup data.</inlineHelpText>
    <label>Lookup Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>SBQQ__LookupData__c</fullName><default>false</default><label>SBQQ__LookupData__c</label></value>
            <value><fullName>Product2</fullName><default>false</default><label>Product2</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>