force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__LookupTypeField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__LookupTypeField__c</fullName>
    <description>Field on Lookup Object corresponding to Product Action Type picklist. Field must be a Picklist or Text.</description>
    <inlineHelpText>Field on Lookup Object corresponding to Product Action Type picklist. Field must be a Picklist or Text.</inlineHelpText>
    <label>Lookup Type Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>SBQQ__Type__c</fullName><default>false</default><label>SBQQ__Type__c</label></value>
            <value><fullName>MandatoryFor_LookupType__c</fullName><default>false</default><label>MandatoryFor_LookupType__c</label></value>
            <value><fullName>MandatoryFor_LookupType_Remove__c</fullName><default>false</default><label>MandatoryFor_LookupType_Remove__c</label></value>
            <value><fullName>MandatoryFor_LookupType_Hide__c</fullName><default>false</default><label>MandatoryFor_LookupType_Hide__c</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>