force-app/main/default/objects/SBQQ__ProductRule__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Type__c</fullName>
    <description>Type of rule. Validation displays error messages. Selection causes products to be added or suggested. Alert displays a warning, but requires no rectification. Filter refines option lookup results for Dynamic Bundles.</description>
    <inlineHelpText>Type of rule. Validation displays error messages. Selection causes products to be added or suggested. Alert displays a warning, but requires no rectification. Filter refines option lookup results for Dynamic Bundles.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Validation</fullName><default>false</default><label>Validation</label></value>
            <value><fullName>Selection</fullName><default>false</default><label>Selection</label></value>
            <value><fullName>Alert</fullName><default>false</default><label>Alert</label></value>
            <value><fullName>Filter</fullName><default>false</default><label>Filter</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>